# atlas_registration

./: labdata-atlasreg.sdef  pyproject.toml
atlas_registration/: __init__.py  atlasutils.py  elastixutils.py  plotting.py  probe_alignment.py  probe_tracks.py
labdata_plugin/: __init__.py  pluginschema.py
labdata_plugin/dashboard/: __init__.py  alignment.py  common.py  sessions.py  track_annotation.py
